syntax = "proto3";

option java_package = "generated";

message User {
    int64 id = 1;
    string email = 2;
    string name = 3;
    string phone = 4;
}

message CreateUser {
    string email = 1;
    string name = 2;
    string phone = 3;
}

message UserList {
    repeated User users = 1;
}

message SaveUserRequest{
    CreateUser user = 1;
}

message GetUserByIdRequest{
    int64 id = 1;
}

message GetUserListRequest{
    repeated int64 id = 1;
}

// questionable
service UserService{
    rpc SaveUser(SaveUserRequest) returns (User);
    rpc GetUser(GetUserByIdRequest) returns (User);
    rpc GetUserList(GetUserListRequest) returns (UserList);
}
